--- a/src/extensions/languages/English.json
+++ b/src/extensions/languages/English.json
@@ -177,6 +177,8 @@
         "core_menu_helpandsupport_commandpost_label": "Menubar: CommandPost Help & Support",
         "core_menu_helpandsupport_label": "Menubar: Help & Support Section",
         "core_menu_manager_label": "Manager: Menubar",
+        "core_menu_quit_label": "Menubar: Quit",
+        "core_menu_restart_label": "Menubar: Restart",
         "core_menu_top_label": "Menubar: Top Section",
         "core_midi_controls_banks_label": "MIDI: Banks",
         "core_midi_manager_label": "Manager: MIDI",
@@ -197,7 +199,6 @@
         "core_preferences_panels_touchbar_label": "Preferences: Touch Bar",
         "core_preferences_panels_webapp_label": "Preferences Panel: WebApp",
         "core_preferences_updates_label": "Preferences: Updates",
-        "core_quit_label": "Quit Command",
         "core_setup_label": "Manager: Setup",
         "core_streamdeck_manager_label": "Manager: Stream Deck",
         "core_tangent_actions_label": "Tangent: ComandPost Actions Support",
@@ -985,6 +986,7 @@
         "resetSelectedControl": "Reset Selected Control",
         "resetShortcuts": "Reset to Default Shortcuts",
         "resetShortcutsAllToNone": "Set All Shortcuts to None",
+        "restart": "Restart",
         "restore": "Restore",
         "reverse": "Reverse",
         "right": "Right",
