--- a/src/extensions/languages/English.json
+++ b/src/extensions/languages/English.json
@@ -106,7 +106,8 @@
         "circle": "Circle",
         "clear": "Clear",
         "clearHistory": "Clear History",
-        "clearingFinalCutProCacheRestart": "Clearing the Final Cut Pro Plugins caches requires CommandPost to Restart.",
+        "clearingFinalCutProCacheRestart": "Clearing the Final Cut Pro Plugins caches requires CommandPost to Restart",
+        "clearingFinalCutProCacheRestartWarning": "The cache will be rebuilt when CommandPost starts, which may take several minutes. Do you want to continue?",
         "clearList": "Clear List",
         "clearLog": "Clear Log",
         "clearPasteboardHistory": "Clear Pasteboard History",
@@ -433,6 +434,7 @@
         "display": "Display",
         "displayProxyOriginalIcon": "Display Proxy/Original Icon in Menubar",
         "displayThisMenuAsIcon": "Display Menubar As Icon",
+        "dockIcon": "Dock Icon",
         "donateToDevelopers": "Paypal Donation to Developers",
         "done": "Done",
         "downloadTangentHub": "Download Tangent Hub",
@@ -454,6 +456,7 @@
             "other": "Enable Background Render (%{count} secs)"
         },
         "enableCustomisedTouchBar": "Enable Customised Touch Bar",
+        "enableDockIcon": "Enable Dock Icon",
         "enabled": "Enabled",
         "enableDeveloperMode": "Enable Developer Mode",
         "enableDisableBalanceColor": "Enable/Disable Balance Color",
@@ -931,6 +934,7 @@
         "plugin_status_loaded": "Loaded",
         "pluginAction": "Action",
         "pluginCache": "Plugin Cache",
+        "pluginCacheDescription": "This is the plugin cache used by CommandPost's Console.",
         "pluginCategory": "Category",
         "pluginName": "Plugin Name",
         "pluginRequired": "Required",
