--- a/src/extensions/languages/English.json
+++ b/src/extensions/languages/English.json
@@ -65,6 +65,8 @@
         "batchExport": "Batch Export",
         "batchExportComplete": "Batch Export is now complete.\n\nThe selected clips/projects have been added to your Final Cut Pro or Compressor render queue.",
         "batchExportDestinationDisabled": "Target destination is disabled.",
+        "batchExportInvalidCaptionsDetected": "Captions or subtitles with unresolved validation errors were detected, which has aborted the Batch Export.\n\nInvalid Captions can be ignored via the Batch Export Preferences if required.",
+        "batchExportMissingFilesAndBadCaptionsDetected": "Missing or offline titles, effects or generators as well as captions or subtitles with unresolved validation errors were detected, which has aborted the Batch Export.\n\nMissing & Offline Effects and Invalid Captions can be ignored via the Batch Export Preferences if required.",
         "batchExportMissingFilesDetected": "Missing or offline titles, effects or generators were detected, which has aborted the Batch Export.\n\nMissing & Offline Effects can be ignored via the Batch Export Preferences if required.",
         "batchExportModeError": "Your mouse must be hovering over either the Timeline or the Browser to use the Batch Export functionality.",
         "batchExportNoClipsInBrowser": "No clips selected in the browser.\n\nPlease select at least one clip, Keyword Collection or Smart Collection and try again.",
@@ -735,6 +737,7 @@
         "icon": "Icon",
         "ignoreESCKeyWhenFinalCutProIsFullscreen": "Ignore ESC Key when Final Cut Pro is Fullscreen",
         "ignoreInsertedCameraCards": "Ignore Inserted Camera Cards",
+        "ignoreInvalidCaptions": "Ignore Invalid Captions Warning",
         "ignoreMissingEffects": "Ignore Missing & Offline Files Warning",
         "ignoreProxies": "Ignore Proxies Warning",
         "iMessageDestination": "Mobile/Apple ID",
