--- a/src/extensions/languages/English.json
+++ b/src/extensions/languages/English.json
@@ -576,6 +576,7 @@
         "finalcutpro_menu_administrator_advancedfeatures_label": "Menubar: Advanced Features",
         "finalcutpro_menu_administrator_label": "Menubar: Administrator",
         "finalcutpro_menu_finalcutpro_label": "Menubar: Final Cut Pro",
+        "finalcutpro_menu_general_label": "Menubar: Final Cut Pro General Menu",
         "finalcutpro_menu_helpandsupport_finalcutpro_label": "Menubar: Final Cut Pro Help & Support",
         "finalcutpro_menu_mediaimport_label": "Menubar: Media Import",
         "finalcutpro_menu_menuaction_label": "Menubar: Menu Action",
@@ -587,7 +588,6 @@
         "finalcutpro_menu_timeline_label": "Menubar: Timeline",
         "finalcutpro_menu_tools_label": "Menubar: Tools",
         "finalcutpro_menu_tools_notifications_label": "Menubar: Notifications",
-        "finalcutpro_menu_top_label": "Menubar: Final Cut Pro Top Menu",
         "finalcutpro_menu_viewer_label": "Menubar: Viewer",
         "finalcutpro_menu_viewer_showtimecode_label": "Menubar: Viewer > Show Timecode",
         "finalcutpro_midi_controls_color_label": "MIDI Controls: Color Board",
@@ -670,6 +670,7 @@
         "finalCutProPanelTooltip": "Final Cut Pro Preferences",
         "finalcutproUnsupportedVersionText": "CommandPost requires Final Cut Pro <strong>%{minVersion}</strong> or later, but you have version <strong>%{thisVersion}</strong>.<br /><br />Most Final Cut Pro functionality will be disabled or unreliable. Please upgrade to get best results.",
         "finalcutproUnsupportedVersionTitle": "Unsupported Version",
+        "finder": "Finder",
         "finder_pasteboard_label": "Finder: Pasteboard Tools",
         "finder_texttools_label": "Text Tools",
         "finder_window_label": "Window Management",
@@ -1083,6 +1084,7 @@
         "showInspector": "Show Inspector",
         "showProjectTimecodeBottom": "Show Project Timecode Bottom",
         "showProjectTimecodeTop": "Show Project Timecode Top",
+        "showSectionHeadingsInMenubar": "Show Section Headings in Menubar",
         "showSourceTimecodeBottom": "Show Source Timecode Bottom",
         "showSourceTimecodeTop": "Show Source Timecode Top",
         "showTimecode": "Show Timecode",
