--- a/src/extensions/languages/English.json
+++ b/src/extensions/languages/English.json
@@ -354,7 +354,7 @@
         "cpShowSourceTimecodeBottom_title": "Show Source Timecode Bottom",
         "cpShowSourceTimecodeTop_title": "Show Source Timecode Top",
         "cpShowTimelineInPlayer_title": "Show Timeline in Player",
-        "cpSingleMatchFrameAndHighlight_title": "Single Match Frame and Highlight",
+        "cpSingleMatchFrameAndHighlight_title": "Reveal Single Clip in Browser & Highlight",
         "cpStabilizationDisable_title": "Disable Stabilization",
         "cpStabilizationEnable_title": "Enable Stabilization",
         "cpStabilizationToggle_title": "Toggle Stabilization",
