--- a/src/extensions/languages/English.json
+++ b/src/extensions/languages/English.json
@@ -463,7 +463,6 @@
         "enabled": "Enabled",
         "enableDeveloperMode": "Enable Developer Mode",
         "enableDisableBalanceColor": "Enable/Disable Balance Color",
-        "enableEGPUSupport": "Prefer External GPU (High Sierra 10.13.4 to 10.13.6)",
         "enableFilenamePrefix": "Enable Filename Prefix",
         "enableHacksShortcuts": "Control CommandPost Shortcuts within Final Cut Pro",
         "enableHUD": "Enable HUD",
@@ -553,7 +552,6 @@
         "finalcutpro_commands_label": "Final Cut Pro Keyboard Commands",
         "finalcutpro_console_font_label": "Console: Font",
         "finalcutpro_console_label": "Console",
-        "finalcutpro_egpu_label": "eGPU Support",
         "finalcutpro_export_batch_label": "Batch Export",
         "finalcutpro_export_batch_manager_label": "Manager: Batch Export",
         "finalcutpro_feedback_bugreport_label": "Help & Support: Report Bug to Apple",
@@ -1080,6 +1078,8 @@
         "showButtons": "Show Buttons",
         "showDropTargets": "Show Drop Targets",
         "showGenerators": "Show Generators",
+        "showHiddenFCPXMLExportOptions": "Show Hidden FCPXML Export Options",
+        "showHiddenFCPXMLImportOptions": "Show Hidden FCPXML Import Options",
         "showInspector": "Show Inspector",
         "showProjectTimecodeBottom": "Show Project Timecode Bottom",
         "showProjectTimecodeTop": "Show Project Timecode Top",
