--- a/src/extensions/languages/English.json
+++ b/src/extensions/languages/English.json
@@ -180,6 +180,7 @@
         "core_menu_helpandsupport_commandpost_label": "Menubar: CommandPost Help & Support",
         "core_menu_helpandsupport_label": "Menubar: Help & Support Section",
         "core_menu_manager_label": "Manager: Menubar",
+        "core_menu_preferences_label": "Menubar: Preferences",
         "core_menu_quit_label": "Menubar: Quit",
         "core_menu_restart_label": "Menubar: Restart",
         "core_menu_top_label": "Menubar: Top Section",
@@ -576,6 +577,7 @@
         "finalcutpro_menu_finalcutpro_label": "Menubar: Final Cut Pro",
         "finalcutpro_menu_general_label": "Menubar: Final Cut Pro General Menu",
         "finalcutpro_menu_helpandsupport_finalcutpro_label": "Menubar: Final Cut Pro Help & Support",
+        "finalcutpro_menu_manager_label": "Menubar: Manager",
         "finalcutpro_menu_mediaimport_label": "Menubar: Media Import",
         "finalcutpro_menu_menuaction_label": "Menubar: Menu Action",
         "finalcutpro_menu_pasteboard_label": "Menubar: Pasteboard",
@@ -606,6 +608,7 @@
         "finalcutpro_pasteboard_shared_label": "Shared Pasteboard",
         "finalcutpro_preferences_app_label": "Preferences: Panel",
         "finalcutpro_preferences_clearcache_label": "Preferences: Clear Cache",
+        "finalcutpro_preferences_fcpxml_label": "Preferences: FCPXML",
         "finalcutpro_preferences_general_label": "Preferences: General",
         "finalcutpro_preferences_scanfinalcutpro_label": "Preferences: Scan Final Cut Pro",
         "finalcutpro_setup_scan_label": "Setup: Final Cut Pro Plugin Scan",
@@ -1048,6 +1051,7 @@
         "shadows": "Shadows",
         "shadows2": "SD",
         "shadows4": "Shdw",
+        "shared": "Shared",
         "shareDetails_export": "Type: Local Export\nLocation: %{result}",
         "shareDetails_Facebook": "Type: Facebook\nLogin: %{login}\nTitle: %{title}",
         "shareDetails_Tudou": "Type: Tudou\nLogin: %{login}\nTitle: %{title}",
