--- a/src/extensions/languages/English.json
+++ b/src/extensions/languages/English.json
@@ -21,7 +21,7 @@
         "addWatchFolder": "Add Watch Folder",
         "advanced": "Advanced",
         "advancedFeatures": "Advanced Features",
-        "advancedFeaturesWarning": "The below preferences make changes to the internals of Final Cut Pro and therefore require your Administrators Password.<br /><br />Please use at your own risk.",
+        "advancedFeaturesWarning": "The below preferences use hidden Final Cut Pro preferences.<br />Please use at your own risk.",
         "advancedPanelLabel": "Advanced",
         "advancedPanelTooltip": "Advanced Preferences",
         "alignAudioToVideo": "Align Audio to Video",
@@ -68,8 +68,6 @@
         "batchExportInvalidCaptionsDetected": "Captions or subtitles with unresolved validation errors were detected, which has aborted the Batch Export.\n\nInvalid Captions can be ignored via the Batch Export Preferences if required.",
         "batchExportMissingFilesAndBadCaptionsDetected": "Missing or offline titles, effects or generators as well as captions or subtitles with unresolved validation errors were detected, which has aborted the Batch Export.\n\nMissing & Offline Effects and Invalid Captions can be ignored via the Batch Export Preferences if required.",
         "batchExportMissingFilesDetected": "Missing or offline titles, effects or generators were detected, which has aborted the Batch Export.\n\nMissing & Offline Effects can be ignored via the Batch Export Preferences if required.",
-        "batchExportModeError": "Your mouse must be hovering over either the Timeline or the Browser to use the Batch Export functionality.",
-        "batchExportNoClipsInBrowser": "No clips selected in the browser.\n\nPlease select at least one clip, Keyword Collection or Smart Collection and try again.",
         "batchExportNoClipsInTimeline": "No clips selected in the timeline.\n\nPlease select at least one clip and try again.",
         "batchExportNoDestination": "It doesn't look like you have a Default Destination selected.\n\nYou can set a Default Destination by going to 'Preferences', clicking the 'Destinations' tab, right-clicking on the Destination you would like to use and then click 'Make Default'.\n\nYou can set a Batch Export Destination Preset via the CommandPost menubar.",
         "batchExportNotShowing": "Unable to show the Export Dialog",
@@ -92,16 +90,11 @@
         "button": "Button",
         "buttonLabel": "Button Label",
         "cancel": "Cancel",
-        "changeBackupInterval": "Change Backup Interval",
-        "changeBackupIntervalError": "The backup interval you entered is not valid. Please enter a value in minutes.",
-        "changeBackupIntervalTextbox": "What would you like to set your Final Cut Pro Backup Interval to (in minutes)?",
         "changeCustomFilename": "Change Custom Filename",
         "changeDestinationFolder": "Change Destination Folder",
         "changeDestinationPreset": "Change Destination Preset",
         "changeFinalCutProLanguage": "Changing Final Cut Pro's language requires Final Cut Pro to restart.",
         "changeLanguageRestart": "Changing languages requires CommandPost to Restart.",
-        "changeSmartCollectionLabel": "Change Smart Collections Label",
-        "changeSmartCollectionsLabel": "Changing the Smart Collections Label requires Final Cut Pro to restart.",
         "channel": "Channel",
         "channelPressure": "Channel Pressure",
         "checkForUpdates": "Check for Updates",
@@ -350,10 +343,6 @@
         "cpSetupWatchFolders_title": "Setup Watch Folders",
         "cpShowGrid_title": "Show Window Grid",
         "cpShowListOfShortcutKeys_title": "Show Keyboard Shortcuts",
-        "cpShowProjectTimecodeBottom_title": "Show Project Timecode Bottom",
-        "cpShowProjectTimecodeTop_title": "Show Project Timecode Top",
-        "cpShowSourceTimecodeBottom_title": "Show Source Timecode Bottom",
-        "cpShowSourceTimecodeTop_title": "Show Source Timecode Top",
         "cpShowTimelineInPlayer_title": "Show Timeline in Player",
         "cpSingleMatchFrameAndHighlight_title": "Reveal Single Clip in Browser & Highlight",
         "cpStabilizationDisable_title": "Disable Stabilization",
@@ -465,11 +454,9 @@
         "enableDeveloperMode": "Enable Developer Mode",
         "enableDisableBalanceColor": "Enable/Disable Balance Color",
         "enableFilenamePrefix": "Enable Filename Prefix",
-        "enableHacksShortcuts": "Control CommandPost Shortcuts within Final Cut Pro",
         "enableHUD": "Enable HUD",
         "enableiMessageNotifications": "Enable iMessage Notifications",
         "enableMIDI": "Enable MIDI Controls",
-        "enableMovingMarkers": "Enable Moveable Markers",
         "enablePasteboardHistory": "Enable Pasteboard History",
         "enableProwlNotifications": "Enable Prowl Notifications",
         "enablePushoverNotifications": "Enable Pushover Notifications",
@@ -479,7 +466,6 @@
         "enableShortcutsDuringFullscreen": "Enable Shortcuts During Fullscreen Playback",
         "enableStreamDeck": "Enable Stream Deck",
         "enableTangentPanelSupport": "Enable Tangent Panel Support",
-        "enableTimecodeOverlay": "Enable Timecode Overlay",
         "enableVirtualTouchBar": "Enable Virtual Touch Bar",
         "enableVisualAlerts": "Enable Visual Alerts",
         "enableVoiceCommands": "Enable Voice Commands",
@@ -548,7 +534,6 @@
         "finalcutpro_browser_keywords_label": "Browser: Keyword Features",
         "finalcutpro_browser_pasteboardtomarkers_label": "Browser: Pasteboard Markers to Clip",
         "finalcutpro_browser_playhead_label": "Browser: Playhead Features",
-        "finalcutpro_bugfix_clipselection_label": "Bugfix: Final Cut Pro 10.4.1 Rogue Clip Selection",
         "finalcutpro_commands_actions_label": "Commands Actions",
         "finalcutpro_commands_label": "Final Cut Pro Keyboard Commands",
         "finalcutpro_console_font_label": "Console: Font",
@@ -560,12 +545,7 @@
         "finalcutpro_fullscreen_dockicon_label": "Full Screen Dock Icon Manager",
         "finalcutpro_fullscreen_shortcuts_label": "Fullscreen Shortcuts",
         "finalCutPro_group": "Final Cut Pro",
-        "finalcutpro_hacks_backupinterval_label": "Backup Interval",
-        "finalcutpro_hacks_movingmarkers_label": "Moving Makers",
-        "finalcutpro_hacks_playbackrendering_label": "Playback Rendering Controls",
-        "finalcutpro_hacks_shortcuts_label": "Hacks Shortcuts",
-        "finalcutpro_hacks_smartcollectionslabel_label": "Smart Collections Label",
-        "finalcutpro_hacks_timecodeoverlay_label": "Timecode Overlay",
+        "finalcutpro_advanced_playbackrendering_label": "Playback Rendering Controls",
         "finalcutpro_hud_label": "HUD",
         "finalcutpro_import_ignorecard_label": "Ignore Cards",
         "finalcutpro_import_preferences_label": "Import Preferences",
@@ -589,7 +569,6 @@
         "finalcutpro_menu_tools_label": "Menubar: Tools",
         "finalcutpro_menu_tools_notifications_label": "Menubar: Notifications",
         "finalcutpro_menu_viewer_label": "Menubar: Viewer",
-        "finalcutpro_menu_viewer_showtimecode_label": "Menubar: Viewer > Show Timecode",
         "finalcutpro_midi_controls_color_label": "MIDI Controls: Color Board",
         "finalcutpro_midi_controls_colorwheels_label": "MIDI Controls: Color Wheels",
         "finalcutpro_midi_controls_controlui_absolute_label": "MIDI Controls: Control FCP UI (Absolute)",
@@ -606,9 +585,9 @@
         "finalcutpro_pasteboard_history_label": "Pasteboard History",
         "finalcutpro_pasteboard_manager_label": "Manager: Pasteboard",
         "finalcutpro_pasteboard_shared_label": "Shared Pasteboard",
-        "finalcutpro_preferences_app_label": "Preferences: Panel",
+        "finalcutpro_preferences_manager_label": "Preferences: Panel Manager",
         "finalcutpro_preferences_clearcache_label": "Preferences: Clear Cache",
-        "finalcutpro_preferences_fcpxml_label": "Preferences: FCPXML",
+        "finalcutpro_advanced_fcpxml_label": "Advanced: FCPXML Import/Export Extras",
         "finalcutpro_preferences_general_label": "Preferences: General",
         "finalcutpro_preferences_scanfinalcutpro_label": "Preferences: Scan Final Cut Pro",
         "finalcutpro_setup_scan_label": "Setup: Final Cut Pro Plugin Scan",
@@ -635,7 +614,7 @@
         "finalcutpro_timeline_colorboard_label": "Timeline: Color Board",
         "finalcutpro_timeline_colorwheels_label": "Timeline: Color Wheel Actions",
         "finalcutpro_timeline_commandsetactions_label": "Command Set Actions",
-        "finalcutpro_timeline_disablewaveforms_label": "Timeline: Waveform Drawing",
+        "finalcutpro_advanced_disablewaveforms_label": "Advanced: Waveform Drawing",
         "finalcutpro_timeline_effects_label": "Timeline: Effects",
         "finalcutpro_timeline_generators_label": "Timeline: Generators",
         "finalcutpro_timeline_height_label": "Timeline: Height",
@@ -659,8 +638,7 @@
         "finalcutpro_touchbar_widgets_colorboard_label": "Widget: Color Board",
         "finalcutpro_touchbar_widgets_zoom_label": "Widget: Timeline Zoom",
         "finalcutpro_viewer_overlays_label": "Viewer: Overlays",
-        "finalcutpro_viewer_showtimecode_label": "Viewer: Show Timecode",
-        "finalcutpro_viewer_showtimelineinplayer_label": "Viewer: Show Timeline in Player",
+        "finalcutpro_advanced_showtimelineinplayer_label": "Advanced: Show Timeline in Player",
         "finalcutpro_viewer_timecodeoverlay_label": "Viewer: Timecode Overlay",
         "finalcutpro_watchers_preferences_label": "Watchers: Preferences",
         "finalcutpro_watchfolders_fcpxml_label": "Watch Folders: XML",
@@ -706,12 +684,6 @@
         "grouped": "Grouped",
         "guide": "Guide",
         "guides": "Guides",
-        "hacks_group": "Advanced Features",
-        "hacksDisabling": "Disabling",
-        "hacksEnabling": "Enabling",
-        "hacksShortcutAdminPassword": "CommandPost Shortcuts in Final Cut Pro requires your Administrator password.",
-        "hacksShortcutsEditorText": "Please use the Final Cut Pro <strong>Command Editor</strong> to edit these shortcuts.<br />\n                                                        <br />\n                                                        This feature can be disabled by unchecking the <strong>Control CommandPost Shortcuts within Final Cut Pro</strong><br/>\n                                                        option in the Final Cut Pro tab.\n                                                        ",
-        "hacksShortcutsRestart": "CommandPost Shortcuts in Final Cut Pro requires your Administrator password and also needs Final Cut Pro to restart before it can take affect.",
         "helpAndSupport": "Help & Support",
         "helpandsupport_group": "Help & Support",
         "highlightedItem": "Highlighted Item",
@@ -948,7 +920,6 @@
         "pluginsCustomFolderDetails": "<strong>Custom Plugins</strong> can also be saved in the Plugins Folder.",
         "pluginsDisableCheck": "Are you sure you want to disable this plugin?",
         "pluginsEnableCheck": "Are you sure you want to enable this plugin?",
-        "pluginShortcuts": "Plugin Shortcuts",
         "pluginsManagerLabel": "Plugins Manager",
         "pluginsOpenPluginsFolder": "Open Plugins Folder",
         "pluginsPanelLabel": "Plugins",
@@ -1086,20 +1057,12 @@
         "showHiddenFCPXMLExportOptions": "Show Hidden FCPXML Export Options",
         "showHiddenFCPXMLImportOptions": "Show Hidden FCPXML Import Options",
         "showInspector": "Show Inspector",
-        "showProjectTimecodeBottom": "Show Project Timecode Bottom",
-        "showProjectTimecodeTop": "Show Project Timecode Top",
         "showSectionHeadingsInMenubar": "Show Section Headings in Menubar",
-        "showSourceTimecodeBottom": "Show Source Timecode Bottom",
-        "showSourceTimecodeTop": "Show Source Timecode Top",
-        "showTimecode": "Show Timecode",
         "showTimelineInPlayer": "Show Timeline in Player",
         "showTitles": "Show Titles",
-        "showTools": "Show Tools",
         "showTransitions": "Show Transitions",
         "six": "6",
         "skip": "Skip",
-        "smartCollectionsLabelError": "The Smart Collections Label you entered is not valid.\n\nPlease only use standard characters and numbers.",
-        "smartCollectionsLabelTextbox": "What would you like to set your Smart Collections Label to:",
         "sound": "Sound",
         "spacing": "Spacing",
         "start": "Start",
@@ -1151,7 +1114,6 @@
         "toggleOverlaysWithCapsLock": "Toggle Overlays with Caps Lock",
         "toggleVideoScopesInEventViewer": "Toggle Video Scopes in Event Viewer",
         "toggleVideoScopesInViewer": "Toggle Video Scopes in Viewer",
-        "togglingMovingMarkersRestart": "Toggling Moving Markers requires Final Cut Pro to restart.",
         "togglingWaveformsRestart": "Toggling Waveform Drawings requires Final Cut Pro to restart.",
         "tools": "Tools",
         "topCentreOfTimeline": "Top Centre of Timeline",
