--- a/src/extensions/languages/English.json
+++ b/src/extensions/languages/English.json
@@ -38,6 +38,7 @@
         "apiKeysValidated": "Your API keys you entered have been successfully validated.",
         "appearance": "Appearance",
         "apple": "Apple",
+        "appleBugReporter": "Apple Bug Reporter",
         "application": "Application",
         "applicationAPIKey": "Application API Key",
         "apply": "Apply",
@@ -954,7 +955,9 @@
         "replaceExistingFiles": "Replace Existing Files",
         "replaceSpaceWithUnderscore": "Replace Spaces with Underscores",
         "reportATranslationMistake": "Report a Translation Mistake",
-        "reportBugToApple": "Report Final Cut Pro Bug to Apple",
+        "reportCompressorBugToApple": "Report Compressor Bug to Apple",
+        "reportMotionBugToApple": "Report Motion Bug to Apple",
+        "reportFinalCutProBugToApple": "Report Final Cut Pro Bug to Apple",
         "reset": "Reset",
         "resetAllControls": "Reset All Controls",
         "resetCurrentEffectPane": "Reset Current Effect Pane",
@@ -1063,7 +1066,9 @@
         "stills": "Stills",
         "success": "Success",
         "suggestATranslation": "Suggest A New Language",
-        "suggestFeatureToApple": "Suggest Final Cut Pro Feature to Apple",
+        "suggestCompressorFeatureToApple": "Suggest Compressor Feature to Apple",
+        "suggestMotionFeatureToApple": "Suggest Motion Feature to Apple",
+        "suggestFinalCutProFeatureToApple": "Suggest Final Cut Pro Feature to Apple",
         "support": "Support",
         "switchBetweenInsideOutsideMarks": "Switch Between Inside/Outside Masks",
         "switchingTo": "Switching to",
