--- a/src/extensions/languages/English.json
+++ b/src/extensions/languages/English.json
@@ -145,6 +145,7 @@
         "components": "Components",
         "compoundClip": "Compound Clip",
         "compressor": "Compressor",
+        "compressor_feedback_bugreport_label": "Help & Support: Report Bug to Apple",
         "compressor_watchfolders_panels_media_label": "Watch Folders: Compressor",
         "compressorError": "Something went wrong when sending to Compressor.",
         "console": "Console",
@@ -447,10 +448,10 @@
             "other": "Enable Background Render (%{count} secs)"
         },
         "enableCustomisedTouchBar": "Enable Customised Touch Bar",
-        "enableDockIcon": "Enable Dock Icon",
         "enabled": "Enabled",
         "enableDeveloperMode": "Enable Developer Mode",
         "enableDisableBalanceColor": "Enable/Disable Balance Color",
+        "enableDockIcon": "Enable Dock Icon",
         "enableFilenamePrefix": "Enable Filename Prefix",
         "enableHUD": "Enable HUD",
         "enableiMessageNotifications": "Enable iMessage Notifications",
@@ -528,6 +529,10 @@
         "fileCouldNotBeRead": "The selected file could not be read.",
         "finalCutPro": "Final Cut Pro",
         "finalcutpro_actions_custom_label": "Shortcuts: Custom Actions",
+        "finalcutpro_advanced_disablewaveforms_label": "Advanced: Waveform Drawing",
+        "finalcutpro_advanced_fcpxml_label": "Advanced: FCPXML Import/Export Extras",
+        "finalcutpro_advanced_playbackrendering_label": "Playback Rendering Controls",
+        "finalcutpro_advanced_showtimelineinplayer_label": "Advanced: Show Timeline in Player",
         "finalcutpro_browser_addnote_label": "Browser: Add Note",
         "finalcutpro_browser_keywords_label": "Browser: Keyword Features",
         "finalcutpro_browser_pasteboardtomarkers_label": "Browser: Pasteboard Markers to Clip",
@@ -543,7 +548,6 @@
         "finalcutpro_fullscreen_dockicon_label": "Full Screen Dock Icon Manager",
         "finalcutpro_fullscreen_shortcuts_label": "Fullscreen Shortcuts",
         "finalCutPro_group": "Final Cut Pro",
-        "finalcutpro_advanced_playbackrendering_label": "Playback Rendering Controls",
         "finalcutpro_hud_label": "HUD",
         "finalcutpro_import_ignorecard_label": "Ignore Cards",
         "finalcutpro_import_preferences_label": "Import Preferences",
@@ -582,10 +586,9 @@
         "finalcutpro_pasteboard_history_label": "Pasteboard History",
         "finalcutpro_pasteboard_manager_label": "Manager: Pasteboard",
         "finalcutpro_pasteboard_shared_label": "Shared Pasteboard",
-        "finalcutpro_preferences_manager_label": "Preferences: Panel Manager",
         "finalcutpro_preferences_clearcache_label": "Preferences: Clear Cache",
-        "finalcutpro_advanced_fcpxml_label": "Advanced: FCPXML Import/Export Extras",
         "finalcutpro_preferences_general_label": "Preferences: General",
+        "finalcutpro_preferences_manager_label": "Preferences: Panel Manager",
         "finalcutpro_preferences_scanfinalcutpro_label": "Preferences: Scan Final Cut Pro",
         "finalcutpro_setup_scan_label": "Setup: Final Cut Pro Plugin Scan",
         "finalcutpro_setup_unsupportedversion_label": "Setup: Unsupported Version Check",
@@ -609,7 +612,6 @@
         "finalcutpro_timeline_colorboard_label": "Timeline: Color Board",
         "finalcutpro_timeline_colorwheels_label": "Timeline: Color Wheel Actions",
         "finalcutpro_timeline_commandsetactions_label": "Command Set Actions",
-        "finalcutpro_advanced_disablewaveforms_label": "Advanced: Waveform Drawing",
         "finalcutpro_timeline_effects_label": "Timeline: Effects",
         "finalcutpro_timeline_generators_label": "Timeline: Generators",
         "finalcutpro_timeline_height_label": "Timeline: Height",
@@ -633,7 +635,6 @@
         "finalcutpro_touchbar_widgets_colorboard_label": "Widget: Color Board",
         "finalcutpro_touchbar_widgets_zoom_label": "Widget: Timeline Zoom",
         "finalcutpro_viewer_overlays_label": "Viewer: Overlays",
-        "finalcutpro_advanced_showtimelineinplayer_label": "Advanced: Show Timeline in Player",
         "finalcutpro_viewer_timecodeoverlay_label": "Viewer: Timecode Overlay",
         "finalcutpro_watchers_preferences_label": "Watchers: Preferences",
         "finalcutpro_watchfolders_fcpxml_label": "Watch Folders: XML",
@@ -663,11 +664,11 @@
         "generator_group": "Generator",
         "getCommandPostPushoverAPIKey": "Create Application API Key",
         "getProwlAccount": "Signup for a Prowl Account",
+        "global": "Global",
         "global_cmds_action": "Global Commands",
         "global_command_group": "All Applications",
         "global_midibanks_action": "MIDI Banks",
         "global_widgets_action": "Global Touch Bar Widgets",
-        "global": "Global",
         "goTo": "Go to",
         "goToBeginning": "Go to Beginning",
         "goToColorInspector": "Go to Color Inspector",
@@ -768,8 +769,8 @@
         "matchColor": "Match Color",
         "mattes": "Mattes",
         "media": "Media",
-        "mediaImport_group": "Media Import",
         "mediaImport": "Media Import",
+        "mediaImport_group": "Media Import",
         "memory": "Memory",
         "menubarHeading": "Menubar",
         "menubarPanelLabel": "Menubar",
@@ -805,6 +806,7 @@
         "modifier": "Modifier",
         "modifierKey": "Modifier Key",
         "monitor": "Monitor",
+        "motion_feedback_bugreport_label": "Help & Support: Report Bug to Apple",
         "mountExternalDrives_title": "Mount External Drives",
         "mountingExternalDrivesMsg": "Mounting external drives...",
         "mouseLocation": "Centre of Mouse Location",
@@ -900,6 +902,7 @@
         "plugin_group_core": "Core",
         "plugin_group_finalcutpro": "Final Cut Pro",
         "plugin_group_finder": "Finder",
+        "plugin_group_motion": "Motion",
         "plugin_group_plugin": "Plugin",
         "plugin_status_active": "Active",
         "plugin_status_disabled": "Disabled",
@@ -956,8 +959,8 @@
         "replaceSpaceWithUnderscore": "Replace Spaces with Underscores",
         "reportATranslationMistake": "Report a Translation Mistake",
         "reportCompressorBugToApple": "Report Compressor Bug to Apple",
-        "reportMotionBugToApple": "Report Motion Bug to Apple",
         "reportFinalCutProBugToApple": "Report Final Cut Pro Bug to Apple",
+        "reportMotionBugToApple": "Report Motion Bug to Apple",
         "reset": "Reset",
         "resetAllControls": "Reset All Controls",
         "resetCurrentEffectPane": "Reset Current Effect Pane",
@@ -1067,8 +1070,8 @@
         "success": "Success",
         "suggestATranslation": "Suggest A New Language",
         "suggestCompressorFeatureToApple": "Suggest Compressor Feature to Apple",
-        "suggestMotionFeatureToApple": "Suggest Motion Feature to Apple",
         "suggestFinalCutProFeatureToApple": "Suggest Final Cut Pro Feature to Apple",
+        "suggestMotionFeatureToApple": "Suggest Motion Feature to Apple",
         "support": "Support",
         "switchBetweenInsideOutsideMarks": "Switch Between Inside/Outside Masks",
         "switchingTo": "Switching to",
