--- a/src/extensions/languages/English.json
+++ b/src/extensions/languages/English.json
@@ -553,6 +553,7 @@
         "finalcutpro_import_preferences_label": "Import Preferences",
         "finalcutpro_inspector_text_label": "Inspector: Text",
         "finalcutpro_inspector_video_label": "Inspector: Video",
+        "finalcutpro_inspector_show_label": "Inspector: Additional Actions",
         "finalcutpro_language_label": "Final Cut Pro Languages",
         "finalcutpro_menu_administrator_advancedfeatures_label": "Menubar: Advanced Features",
         "finalcutpro_menu_administrator_label": "Menubar: Administrator",
@@ -719,6 +720,7 @@
         "includeContactInfo": "Include contact info",
         "includeTextInFilename": "Include Entered Text in Filename",
         "incomingFile": "Incoming File...",
+        "info": "Info",
         "insertIntoTimeline": "Insert into Timeline",
         "inspector": "Inspector",
         "install": "Install",
@@ -1087,6 +1089,7 @@
         "temperature4": "Temp",
         "ten": "10",
         "testTitle": "CommandPost Test",
+        "text": "Text",
         "textToSpeechDestination": "Please select where you want to save your audio files:",
         "thisCanTakeSeveralMinutes": "This can take several minutes",
         "thisIsATest": "This is a test",
@@ -1099,6 +1102,7 @@
         "tint": "Tint",
         "tint4": "Tint",
         "tip": "Tip",
+        "title": "Title",
         "title_group": "Title",
         "toggleAutomaticScriptReloading": "Auto Reload",
         "toggleColorCorrectionEffects": "Toggle Color Correction Effects",
