--- a/src/extensions/languages/English.json
+++ b/src/extensions/languages/English.json
@@ -625,6 +625,7 @@
         "finalcutpro_timeline_playhead_label": "Timeline: Playhead",
         "finalcutpro_timeline_pluginactions_label": "Timeline: Plugin Actions",
         "finalcutpro_timeline_preferences_label": "Timeline: Preferences",
+        "finalcutpro_timeline_renameclip_label": "Timeline: Rename Clip",
         "finalcutpro_timeline_selectalltimelineclips_label": "Timeline: Select All Timeline Clips",
         "finalcutpro_timeline_stabilization_label": "Inspector: Stablization",
         "finalcutpro_timeline_titles_label": "Timeline: Titles",
