--- a/src/extensions/languages/English.json
+++ b/src/extensions/languages/English.json
@@ -67,6 +67,7 @@
         "batchExportActiveTimeline": "Batch Export Active Timeline",
         "batchExportComplete": "Batch Export is now complete.\n\nThe selected clips/projects have been added to your Final Cut Pro or Compressor render queue.",
         "batchExportDestinationDisabled": "Target destination is disabled.",
+        "batchExportFromTimeline": "Batch Export from Timeline",
         "batchExportInvalidCaptionsDetected": "Captions or subtitles with unresolved validation errors were detected, which has aborted the Batch Export.\n\nInvalid Captions can be ignored via the Batch Export Preferences if required.",
         "batchExportMissingFilesAndBadCaptionsDetected": "Missing or offline titles, effects or generators as well as captions or subtitles with unresolved validation errors were detected, which has aborted the Batch Export.\n\nMissing & Offline Effects and Invalid Captions can be ignored via the Batch Export Preferences if required.",
         "batchExportMissingFilesDetected": "Missing or offline titles, effects or generators were detected, which has aborted the Batch Export.\n\nMissing & Offline Effects can be ignored via the Batch Export Preferences if required.",
@@ -94,6 +95,7 @@
         "cancel": "Cancel",
         "changeCustomFilename": "Change Custom Filename",
         "changeDestinationFolder": "Change Destination Folder",
+        "changeDestinationFolderInCompressor": "Change Destination Folder in Compressor",
         "changeDestinationPreset": "Change Destination Preset",
         "changeFinalCutProLanguage": "Changing Final Cut Pro's language requires Final Cut Pro to restart.",
         "changeLanguageRestart": "Changing languages requires CommandPost to Restart.",
@@ -230,7 +232,6 @@
         "cpBackgroundRenderOff_title": "Disable Background Render",
         "cpBackgroundRenderOn_title": "Enable Background Render",
         "cpBatchExport_title": "Batch Export",
-        "cpBatchExportFromBrowser_title": "Batch Export from Browser",
         "cpBatchExportFromTimeline_title": "Batch Export from Timeline",
         "cpBugReport_title": "Report Final Cut Pro Bug to Apple",
         "cpCenterCursor_title": "Center Cursor on Focussed Window",
@@ -551,9 +552,9 @@
         "finalcutpro_hud_label": "HUD",
         "finalcutpro_import_ignorecard_label": "Ignore Cards",
         "finalcutpro_import_preferences_label": "Import Preferences",
+        "finalcutpro_inspector_show_label": "Inspector: Additional Actions",
         "finalcutpro_inspector_text_label": "Inspector: Text",
         "finalcutpro_inspector_video_label": "Inspector: Video",
-        "finalcutpro_inspector_show_label": "Inspector: Additional Actions",
         "finalcutpro_language_label": "Final Cut Pro Languages",
         "finalcutpro_menu_administrator_advancedfeatures_label": "Menubar: Advanced Features",
         "finalcutpro_menu_administrator_label": "Menubar: Administrator",
@@ -645,6 +646,7 @@
         "finalCutProNotRunning": "Opps! Final Cut Pro is not currently running.\n\nThis notification will be reinstated.",
         "finalCutProPanelLabel": "Final Cut Pro",
         "finalCutProPanelTooltip": "Final Cut Pro Preferences",
+        "finalCutProTimelineBatchExportMessage": "Final Cut Pro will export the %{clipCountString}selected %{itemString} in the timeline to the following location:",
         "finalcutproUnsupportedVersionText": "CommandPost requires Final Cut Pro <strong>%{minVersion}</strong> or later, but you have version <strong>%{thisVersion}</strong>.<br /><br />Most Final Cut Pro functionality will be disabled or unreliable. Please upgrade to get best results.",
         "finalcutproUnsupportedVersionTitle": "Unsupported Version",
         "finder": "Finder",
@@ -823,6 +825,8 @@
         "next": "Next",
         "nine": "9",
         "no": "No",
+        "noDestinationFolderSelected": "No Destination Folder Selected",
+        "noDestinationPresetSelected": "No Destination Preset Selected",
         "noDevicesDetected": "No Devices Detected",
         "noFCPUIElementDetected": "No existing Final Cut Pro User Interface Element Registered",
         "noGeneratorShortcut": "There is no Generator assigned to this shortcut.\n\nYou can assign Shortcuts via the CommandPost menu bar.",
@@ -863,6 +867,7 @@
         "openTangentMapper": "Open Tangent Mapper",
         "openVoiceOverUtility": "Open Voice Over Utility",
         "options": "Options",
+        "originalClipName": "Original Clip Name",
         "originalOptimised": "Original/Optimised",
         "outroText": "You can access CommandPost via the satellite icon<br />in your system’s menubar at the top right corner of the screen.",
         "outroTitle": "CommandPost is now setup and ready to go!",
@@ -1148,6 +1153,8 @@
         "userAPIKey": "User API Key",
         "userGuide": "User Guide",
         "useUnderscore": "Use Underscore Seperator",
+        "usingTheFollowingDestinationPreset": "Using the following Destination Preset",
+        "usingTheFollowingNamingConvention": "Using the following naming convention",
         "validate": "Validate",
         "value": "Value",
         "vectorscope": "Vectorscope",
